--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "koa-demo",
-  "version": "0.0.1",
-  "description": "koa study",
-  "devDependencies": {
-    "koa": "^0.20.0"
-  },
-  "dependencies": {
-    "co-views": "^0.3.0",
-    "ejs": "^2.3.1",
-    "koa-bodyparser": "^2.0.0",
-    "koa-logger": "^1.2.2",
-    "koa-router": "^5.0.1",
-    "koa-static": "^1.4.9",
-    "koa-views": "^3.0.0",
-    "mongodb": "^2.0.33",
-    "mongoose": "^4.0.3"
-  },
-  "scripts": {
-    "start": "nodemon --harmony app.js"
-  }
+	"name": "koa-demo",
+	"version": "0.0.1",
+	"description": "koa study",
+	"devDependencies": {
+		"koa": "^0.20.0"
+	},
+	"dependencies": {
+		"co-views": "^0.3.0",
+		"ejs": "^2.3.1",
+		"koa-bodyparser": "^2.0.0",
+		"koa-logger": "^1.2.2",
+		"koa-router": "^5.0.1",
+		"koa-static": "^1.4.9",
+		"koa-views": "^3.0.0",
+		"mongodb": "1.4.9",
+		"mongoomise": "0.0.8",
+		"mongoose": "3.8.16"
+	},
+	"scripts": {
+		"start": "nodemon --harmony app.js"
+	}
 }
